[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
pin-project = "1.1.3"
parking = "2.1.0"
once_cell = "1.18.0"

[dev-dependencies]
async-std = "1.12.0"
more-asserts = "0.3.1"
